--- a/SyncPointBack/Dockerfile
+++ b/SyncPointBack/Dockerfile
@@ -1,25 +1,22 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["SyncPointBack.csproj", "."]
-RUN dotnet restore "./SyncPointBack.csproj"
+RUN dotnet restore "SyncPointBack.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "./SyncPointBack.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "SyncPointBack.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SyncPointBack.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SyncPointBack.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+
 ENTRYPOINT ["dotnet", "SyncPointBack.dll"]
