--- a/SyncPointBack/appsettings.Development.json
+++ b/SyncPointBack/appsettings.Development.json
@@ -21,5 +21,9 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,8002;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;"
+  },
+  "DefaultConnection": "Server=syncpointdb,1433;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;"
 }
