--- a/SyncPointBack/appsettings.Docker.json
+++ b/SyncPointBack/appsettings.Docker.json
@@ -21,5 +21,8 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=syncpointdb,1433;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;"
   }
 }
