--- a/SyncPointBack/SyncPointBack.csproj
+++ b/SyncPointBack/SyncPointBack.csproj
@@ -26,7 +26,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
@@ -53,6 +52,10 @@
   <ItemGroup>
     <Folder Include="logs\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExcelDownload\ExcelDownload.csproj" />
   </ItemGroup>
 
 </Project>
