--- a/SyncPointBack/appsettings.Development.json
+++ b/SyncPointBack/appsettings.Development.json
@@ -23,7 +23,8 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,8002;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;"
+    "DefaultConnection": "Server=localhost,8002;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;",
+    "IdentityConnection": "Server=localhost,8002;Initial Catalog=Identity;User ID=sa;Password=Password@123;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "DefaultConnection": "Server=syncpointdb,1433;Database=syncpointdb;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=false;User Id=sa;Password=Password@123;"
 }
