--- a/SyncPointBack/appsettings.json
+++ b/SyncPointBack/appsettings.json
@@ -23,5 +23,15 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SiteSettings": {
+    "AdminEmail": "example@test.com",
+    "AdminPassword": "administrator"
+  },
+  "JwtTokenSettings": {
+    "ValidIssuer": "ExampleIssuer",
+    "ValidAudience": "ValidAudience",
+    "SymmetricSecurityKey": "fvh8456477hth44j6wfds98bq9hp8bqh9ubq9gjig3qr0[94vj5",
+    "JwtRegisteredClaimNamesSub": "345h098bb8reberbwr4vvb8945"
+  }
 }
